# AAI-540-Group-11

./: .gitignore  README.md  deploy_all.sh  nids_instructions.md  pyproject.toml  test_mse.py
ai_nids_rust/: Cargo.toml  README.md
ai_nids_rust/src/: main.rs
ai_nids_rust/src/data/: loader.rs
ai_nids_rust/src/engine/: classifier.rs  encoder.rs  lambda.rs  mod.rs  sagemaker.rs
go_server/: README.md  deploy_ec2.sh  go.mod  main.go
nids_cicd/: README.md  evaluate.py  pipeline.py  requirements.txt
nids_eda/: 01_data_overview.py  02_class_distribution.py  03_feature_analysis.py  04_correlation_analysis.py  05_temporal_analysis.py  06_attack_profiles.py  07_feature_importance.py  requirements.txt  run_all_eda.sh
nids_lambda_actions/: README.md  deploy.sh  lambda_function.py  test_local.py
nids_monitoring/: README.md  alert_manager.py  dashboard.py  drift_detector.py  monitor_endpoints.py  requirements.txt
nids_run_test/: README.md  trigger.sh
nids_sagemaker_deploy/: README.md  deploy_autoencoder.py  deploy_xgboost.py  inference_xgboost.py  requirements.txt  requirements_xgboost.txt  test_endpoints.py
nids_sagemaker_deploy/deploy_output_xgb/: requirements.txt
nids_train/: DATA_PIPELINE_GUIDE.md  README.md  README_consolidated.md  data_pipeline.py  evaluate.py  numerical_comparison.py  preprocessing.py  train.py  train_ae.py  train_xgb.py  validate.py
nids_train/benchmark/: latency_benchmark.py  simple_benchmark.py
nids_train/classifier/: eval_xgb.py  train.py
nids_train/data/: splits.py
nids_train/export/: export_metadata.py  export_model.py  export_xgb_onnx.py  onnx_export.py  onnx_quantize.py
nids_train/inference/: thresholding.py
nids_train/models/: autoencoder.py
sagemaker_deploy/: cleanup.py  deploy_autoencoder.py  inference_autoencoder.py  test_endpoints.py
ueba_alarms/: README.md  sagemaker_alarms.ipynb
ueba_eda/: .gitignore  .pre-commit-config.yaml  definitions.py  main.py  pyproject.toml
ueba_eda/config/: config.yaml  logger.yaml  schema.py
ueba_eda/data/r6.2/gold/features/: device_features.parquet  file_features.parquet
ueba_eda/notebooks/: eda.ipynb
ueba_eda/pipelines/: run_feature_engineering.py  run_ingestion.py  run_preprocessing.py
ueba_eda/src/feature_engineering/: device.py  email.py  file.py  http.py  logon.py
ueba_eda/src/ingestion/: csv_to_parquet.py
ueba_eda/src/preprocessing/: decoy_file.py  device.py  email.py  file.py  http.py  logon.py
ueba_eda/utils/: common.py  config_util.py  log_util.py
ueba_monitoring/: monitors.ipynb
ueba_sagemaker_model_deploy_endpoint/: README.md  UEBA_ModelDeploy_EndpointCreate.ipynb
ueba_sagemaker_model_group/: README.md  model_group_model_package.ipynb
ueba_training/: README.md  preprocessing.ipynb
(+3 files in other folders)
