[project]
name = "aai-540"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxmltools>=1.15.0",
    "onnxruntime>=1.23.2",
    "onnxruntime-tools>=1.7.0",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "scapy>=2.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "xgboost>=3.1.3",
]
