[package]
name = "ai_nids_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "ndarray", "download-binaries"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
pnet = "0.35.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
